Made an edit to the nav bar when collapsed so the menu content stands out from the navbar background color. Also, removed the plant that originally blocked the fullPageNav component and fixed the positioning of the arrow-doodle by placing it inside the contact form's grid.

--- a/src/css/site/partials/home/_contact.scss
+++ b/src/css/site/partials/home/_contact.scss
@@ -75,20 +75,15 @@ section#contact {
                     background-color: color(accent3);
                     border-color: color(accent3);
                 }
-            }
+                .arrow-doodle {
+                    grid-column: 5 / span 1;
+                    grid-row: 3/ span 2;
 
-            .arrow-doodle {
-                position: absolute;
-                bottom: 0;
-                margin-bottom: 4rem;
-                margin-left: 10rem;
-                height: 6rem;
-                width: 14rem;
-
-                path {
-                    stroke-dasharray: 251;
-                    stroke-dashoffset: 251;
-                    animation: dash-anim 4s linear infinite;
+                    path {
+                        stroke-dasharray: 251;
+                        stroke-dashoffset: 251;
+                        animation: dash-anim 4s linear infinite;
+                    }
                 }
             }
         }
@@ -108,7 +103,7 @@ section#contact {
 }
 
 
-/********** Medium devices (tablets, 768px and up) **********/
+/********** Medium devices (tablets, 768px and below) **********/
 @media only screen and (max-width: 991.98px) {
     section#contact #contact-container .content {
         #contact-form {
@@ -154,13 +149,11 @@ section#contact {
                 button {
                     grid-row: 4;
                 }
-            }
 
-            .arrow-doodle {
-                margin-bottom: 2rem;
-                margin-left: 8.75rem;
-                height: 6rem;
-                width: 14rem;
+                .arrow-doodle {
+                    grid-row: 4/ span 2;
+                    width: 170px;
+                }
             }
         }
     }
