--- a/src/css/site/partials/navigation/_header.scss
+++ b/src/css/site/partials/navigation/_header.scss
@@ -12,12 +12,34 @@ header .navbar {
     .logo-text {
         text-decoration: none;
     }
+
+    .navbar-toggler:focus {
+        outline: none;
+    }
 }
 
 /********** Large and Extra large devices **********/
 @media only screen and (min-width: 991.98px) {
-
     header .navbar .btn-background {
         background: color(secondary);
+    }
+}
+
+/********** Medium devices (tablets, 768px and below) **********/
+@media only screen and (max-width: 991.98px) {
+    header .navbar {
+        padding: 0;
+
+        .header-bar {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: .5rem 1rem;
+        }
+
+        .navbar-collapse.show, .navbar-collapse.collapsing {
+            background-color: color(base2);
+        }
     }
 }
